everything is coming good, just need to be packed

--- a/app/src/main/res/layout/expense_entry.xml
+++ b/app/src/main/res/layout/expense_entry.xml
@@ -49,6 +49,7 @@
         <EditText
             android:id="@+id/itemET"
             android:layout_width="0dp"
+            android:singleLine="true"
             android:layout_height="50dp"
             android:layout_weight=".8"></EditText>
 
