--- a/app/src/main/res/layout/total_report.xml
+++ b/app/src/main/res/layout/total_report.xml
@@ -11,6 +11,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:gravity="center"
+        android:visibility="gone"
         android:text="Month"
         android:textColor="#000000"
         android:textSize="20sp"
@@ -35,6 +36,7 @@
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:text="Total Deposit"
+            android:visibility="gone"
             android:textColor="#000000"
             android:textSize="15sp" />
 
@@ -46,6 +48,7 @@
             android:gravity="center_vertical"
             android:text="Total Expense"
             android:textColor="#000000"
+            android:visibility="gone"
             android:textSize="15sp" />
     </LinearLayout>
 
