--- a/app/src/main/res/layout/total_report.xml
+++ b/app/src/main/res/layout/total_report.xml
@@ -45,7 +45,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center_vertical"
+            android:gravity="center_vertical|right"
             android:text="Total Expense"
             android:textColor="#000000"
             android:visibility="gone"
