--- a/app/src/main/res/layout/total_report_row.xml
+++ b/app/src/main/res/layout/total_report_row.xml
@@ -5,15 +5,32 @@
     android:layout_height="match_parent"
     android:layout_margin="10dp"
     android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="remain"
+            android:gravity="right"
+            android:paddingRight="50dp"
+            android:layout_weight="1"
+            android:id="@+id/remainTV"
+            android:textColor="#000000"
+            android:textStyle="bold" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="budget"
+            android:id="@+id/budgetTV"
+            android:textColor="#000000"
+            android:textStyle="bold" />
+    </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:text="budget"
-        android:id="@+id/budgetTV"
-        android:textColor="#000000"
-        android:textStyle="bold" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
