any months data can be converted to pdf, and added another report section

--- a/app/src/main/res/layout/expense_entry.xml
+++ b/app/src/main/res/layout/expense_entry.xml
@@ -72,7 +72,7 @@
         <EditText
             android:id="@+id/amountET"
             android:layout_width="0dp"
-            android:inputType="number"
+            android:inputType="numberSigned|numberDecimal"
             android:layout_height="50dp"
             android:layout_weight=".8"></EditText>
 
