--- a/app/src/main/res/menu/menu_for_expense_entry.xml
+++ b/app/src/main/res/menu/menu_for_expense_entry.xml
@@ -19,4 +19,9 @@
         android:orderInCategory="3"
         android:title="Budget Entry"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/summaryReport"
+        android:orderInCategory="4"
+        android:title="Summary Report"
+        app:showAsAction="never" />
 </menu>
