--- a/app/src/main/res/menu/menu_for_summary_report.xml
+++ b/app/src/main/res/menu/menu_for_summary_report.xml
@@ -7,12 +7,6 @@
         android:title="home"
         android:icon="@drawable/home"
         app:showAsAction="always" />
-    <item
-        android:id="@+id/reload"
-        android:orderInCategory="2"
-        android:title="reload"
-        android:icon="@drawable/refresh"
-        app:showAsAction="always" />
 
     <item
         android:id="@+id/expense"
@@ -20,8 +14,8 @@
         android:title="Expense Entry"
         app:showAsAction="never" />
     <item
-        android:id="@+id/summaryReport"
+        android:id="@+id/budget"
         android:orderInCategory="4"
-        android:title="Summary Report"
+        android:title="Budget Entry"
         app:showAsAction="never" />
 </menu>
